--- a/index.html
+++ b/index.html
@@ -1,3 +1,135 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Accounting & Warehouse System</title>
+    <link rel="stylesheet" href="https://unpkg.com/spectre.css/dist/spectre.min.css">
+    <link rel="stylesheet" href="https://unpkg.com/spectre.css/dist/spectre-exp.min.css">
+    <link rel="stylesheet" href="https://unpkg.com/spectre.css/dist/spectre-icons.min.css">
+    <style>
+        body {
+            margin: 2rem;
+        }
+        .card {
+            margin-bottom: 2rem;
+        }
+        .form-section {
+            margin-top: 2rem;
+        }
+    </style>
+</head>
+<body>
+
+    <h1 class="text-center">Accounting & Warehouse System</h1>
+
+    <div class="columns">
+        <div class="column col-6">
+            <div class="card">
+                <div class="card-header">
+                    <div class="card-title h5">Current Account Balance</div>
+                </div>
+                <div class="card-body">
+                    <p id="balance">$0.00</p>
+                </div>
+            </div>
+        </div>
+        <div class="column col-6">
+            <div class="card">
+                <div class="card-header">
+                    <div class="card-title h5">Current Stock Level</div>
+                </div>
+                <div class="card-body">
+                    <ul id="stock-list">
+                        <li>No items yet</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="columns form-section">
+        <!-- Purchase Form -->
+        <div class="column col-4">
+            <div class="card">
+                <div class="card-header">
+                    <div class="card-title h6">Purchase Product</div>
+                </div>
+                <div class="card-body">
+                    <form id="purchase-form">
+                        <div class="form-group">
+                            <label for="purchase-name">Product Name</label>
+                            <input class="form-input" type="text" id="purchase-name" required>
+                        </div>
+                        <div class="form-group">
+                            <label for="purchase-price">Unit Price</label>
+                            <input class="form-input" type="number" step="0.01" id="purchase-price" required>
+                        </div>
+                        <div class="form-group">
+                            <label for="purchase-quantity">Number of Pieces</label>
+                            <input class="form-input" type="number" id="purchase-quantity" required>
+                        </div>
+                        <button type="submit" class="btn btn-primary">Purchase</button>
+                    </form>
+                </div>
+            </div>
+        </div>
+
+        <div class="column col-4">
+            <div class="card">
+                <div class="card-header">
+                    <div class="card-title h6">Sell Product</div>
+                </div>
+                <div class="card-body">
+                    <form id="sale-form">
+                        <div class="form-group">
+                            <label for="sale-name">Product Name</label>
+                            <input class="form-input" type="text" id="sale-name" required>
+                        </div>
+                        <div class="form-group">
+                            <label for="sale-price">Unit Price</label>
+                            <input class="form-input" type="number" step="0.01" id="sale-price" required>
+                        </div>
+                        <div class="form-group">
+                            <label for="sale-quantity">Number of Pieces</label>
+                            <input class="form-input" type="number" id="sale-quantity" required>
+                        </div>
+                        <button type="submit" class="btn btn-primary">Sell</button>
+                    </form>
+                </div>
+            </div>
+        </div>
+
+        <div class="column col-4">
+            <div class="card">
+                <div class="card-header">
+                    <div class="card-title h6">Change Account Balance</div>
+                </div>
+                <div class="card-body">
+                    <form id="balance-form">
+                        <div class="form-group">
+                            <label for="balance-type">Operation</label>
+                            <select class="form-select" id="balance-type" required>
+                                <option value="add">Add</option>
+                                <option value="subtract">Subtract</option>
+                            </select>
+                        </div>
+                        <div class="form-group">
+                            <label for="balance-amount">Amount</label>
+                            <input class="form-input" type="number" step="0.01" id="balance-amount" required>
+                        </div>
+                        <button type="submit" class="btn btn-primary">Update Balance</button>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+    <div class="text-center">
+        <a href="/history" class="btn btn-secondary">View History</a>
+    </div>
+
 <form id="purchase-form" method="post">
     <input type="hidden" name="form-type" value="purchase">
 </form>
@@ -9,3 +141,6 @@
 <form id="balance-form" method="post">
     <input type="hidden" name="form-type" value="balance">
 </form>
+
+</body>
+</html>
